# friendlyhub

./: .gitignore  ANTISLOP.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: arm-test.yml  builder-image.yml  flat-manager-image.yml
build-templates/: build.yml  pr-check.yml
builder-image/: Dockerfile  build.sh
deploy/: friendlyhub.flatpakrepo
deploy/flat-manager/: Dockerfile  entrypoint.sh  purge-server.py
dev/: ARCHITECTURE.md  scratchpad.md
docs/: getting-started.md  index.md  package-lock.json  package.json  reviewing.md  submitting-an-app.md  submitting-via-pr.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
infra/: serverless.yml
scripts/: setup.sh
server/: .env.example  Cargo.toml
server/src/: config.rs  db.rs  errors.rs  main.rs  router.rs
server/src/auth/: github_oauth.rs  jwt.rs  middleware.rs  mod.rs
server/src/models/: app.rs  helpers.rs  mod.rs  review.rs  submission.rs  user.rs  verified_domain.rs
server/src/routes/: admin.rs  apps.rs  auth.rs  internal.rs  mod.rs  review.rs  submissions.rs  webhooks.rs
server/src/services/: appstream.rs  checks.rs  flat_manager.rs  github.rs  install_counts.rs  manifest.rs  metainfo.rs  mod.rs  notifications.rs  verification.rs
web/: index.html  package-lock.json  package.json  vite.config.ts  vite_log.txt
web/src/: App.tsx  index.css
web/src/api/: client.test.ts  client.ts
web/src/components/: AppCard.tsx  AutomatedChecks.tsx  BuildProgress.tsx  CollapsibleCard.tsx  Layout.tsx  ManifestEditor.tsx  (+10 more)
(+50 files in other folders)
